Prevent the stretching of geneSearchWrapper to the full width of the CSS grid

--- a/src/content/app/species/components/species-title-area/SpeciesTitleArea.scss
+++ b/src/content/app/species/components/species-title-area/SpeciesTitleArea.scss
@@ -104,6 +104,7 @@ $container-padding-right: 20px;
   display: inline-flex;
   column-gap: 12px;
   white-space: nowrap;
+  justify-self: start;
 
   svg {
     fill: $blue;
